add: lines and squares

--- a/main.css
+++ b/main.css
@@ -145,6 +145,26 @@ visibility: visible;
   margin-top: 50px;
 }
 
+.first-row:before {
+  content: "";
+  display: block;
+  height: 104px;
+  border: 0.8px solid #e4e9eb;
+  position: relative;
+  left: -10px;
+  top: 63px;
+}
+
+.first-row:after {
+  content: "";
+  display: block;
+  height: 104px;
+  border: 0.8px solid #e4e9eb;
+  position: relative;
+  right: -10px;
+  top: 63px;
+}
+
 .one {
   background-image: url(assets/Layer33@1X.png);
   background-repeat: no-repeat;
@@ -211,6 +231,26 @@ visibility: visible;
   margin-top: -63px;
 }
 
+.third-row:before {
+  content: "";
+  display: block;
+  height: 104px;
+  border: 0.8px solid #e4e9eb;
+  position: relative;
+  left: -10px;
+  top: 63px;
+}
+
+.third-row:after {
+  content: "";
+  display: block;
+  height: 104px;
+  border: 0.8px solid #e4e9eb;
+  position: relative;
+  right: -10px;
+  top: 63px;
+}
+
 .ten {
   background-image: url(assets/Layer40@1X.png);
   background-repeat: no-repeat;
@@ -233,6 +273,35 @@ visibility: visible;
   background-image: url(assets/Layer42@1X.png);
   background-repeat: no-repeat;
   background-position: 50%;
+}
+
+.slider {
+  display: flex;
+  margin-top: 46px;
+  margin-left: 29px;
+}
+
+.square:after {
+  content: "";
+  display: block;
+  width: 913px;
+  border: 0.6px solid #e4e9eb;
+  position: relative;
+  top: 17px;
+}
+
+.square {
+  content: "";
+  justify-content: flex-start;
+  margin: 1.5px;
+  display: block;
+  width: 6px;
+  height: 6px;
+  background-color: #ddd2c5;
+}
+
+.square:hover {
+  background-color: #8b8784;
 }
 
 .caption {
